# project-scar

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  enunciado.md  init.sql  prometheus.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
app/: .env.example  Dockerfile  config.py  deps.py  main.py  observability.py  requirements.txt  schemas.py
app/domain/: assets.py  errors.py  versioning.py  window.py
app/logic/: versioning.py  window.py
app/routes/: admin.py  lookups.py
app/storage/: blobstore.py  models.py  repository.py
docs/: openapi.json
examples/: scar.http
scripts/: generate_api_schema.sh  smoke-test.sh  test_integration.sh
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_versioning.py  test_window.py
